# pym2v

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CODE_REVIEW_V2.md  CONTRIBUTING.md  DOCS_README.md  ISSUES_TO_FIX.md  MIGRATION_GUIDE_V2.md  PERFORMANCE_ANALYSIS.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  V2_MIGRATION_PLAN.md  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  ci.yml  docs.yaml  docs.yml  release-dev.yml  release.yml
cli/: index.html
docs/: Schnittstellenbeschreibung Eurogard Cloud.txt  cli.md  index.md  references.md
notebooks/: data_analysis.py  data_download.py  explore copy.ipynb  explore.ipynb  prototype.ipynb
references/: index.html
search/: search_index.json
src/pym2v/: __init__.py  api.py  cli.py  constants.py  logger.py  settings.py  types.py  utils.py
tests/: conftest.py  test_api.py  test_cli.py
