[project]
name = "pym2v"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pandas[excel]>=2.2.3",
    "pydantic-settings>=2.6.1",
    "requests-oauthlib>=2.0.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "nbconvert>=7.16.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["B", "E", "D", "F", "I", "S", "PD", "PT", "SIM"]
ignore = ["D211", "D212"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"**/{tests}/*" = ["D100", "D103", "S101"]
